fixed wrapping text around author image

--- a/style.css
+++ b/style.css
@@ -1,28 +1,28 @@
-	
+
 		html {
 		  height: 100%;
 		  max-width: 100%;
-		  min-height: 100%;  
+		  min-height: 100%;
 		  padding: 0;
 		  margin: 0;
 		}
-		
-		body {	  
+
+		body {
 		  font-family: 'Roboto' , 'Open Sans', 'Helvetica Neue', 'Hiragino Sans GB', 'LiHei Pro', Arial, sans-serif
 		  font-weight: 500;
 		  -webkit-font-smoothing: antialiased;
 		  background-color: #D0CDCD
 		  background-color: #333;
 		  background-color: #141E30;
-		  background-color: #F0F8FF;  
+		  background-color: #F0F8FF;
 		  min-height:100%;
 		  max-width: 100%;
 		  padding: 0;
 		  margin: 0;
 		  display: flex;
-		  flex-direction: column;		  	  
-		 }	
-		
+		  flex-direction: column;
+		 }
+
 		h1 {
 		  color: #FFF;
 		  color: #000;
@@ -32,14 +32,14 @@
 		  max-width: 100%;
 		  text-shadow: 1px 1px #000;
 		}
-		
+
 		h2 {
 		  font-family: 'Inconsolata', monospace;
 		  /*
 		  border-bottom: 1px solid rgba(0, 0, 0, 0.7);
 		  */
 		  color: rgba(0, 0, 0, 1);
-		  
+
 		  font-family: 'Inconsolata', sans-serif;
 		  font-weight: 200;
 		  font-size: 22px;
@@ -48,22 +48,22 @@
 		  text-align: left;
 		  max-width: 30%;
 		}
-		
+
 		a {
-		  color: #FFF;	  
-          
+		  color: #FFF;
+
 		  font-size:1em;
 		  line-height: 1.5em;
 		  text-align:left;
 		  text-decoration:none;
 		  font-weight:500;
-		  color: rgba(0, 0, 0, 1);		  
+		  color: rgba(0, 0, 0, 1);
 		}
-		
+
 		a:hover {
 		  color: #BBB;
 		}
-		
+
 		p {
 		  font-family: 'Roboto' , 'Open Sans', 'Helvetica Neue', 'Hiragino Sans GB', 'LiHei Pro', Arial, sans-serif
 		  color: rgba(0, 0, 0, 1);
@@ -72,14 +72,14 @@
 		  text-align: justify;
 		  font-weight:500;
 		  margin:0;
-		  max-width:100%;  
+		  max-width:100%;
 		  font-size: 18px;
 		  /* FONT SIZE GAAT MIS OP MOBIEL */
 		}
-		
+
 		.nav {
 		  font-family: 'Inconsolata', monospace;
-		  position: fixed; 
+		  position: fixed;
 		  width: 100%;
 		  height: 50px;
 		  /*background-color: #141E30*/;
@@ -88,24 +88,24 @@
 		  list-style-type: none;
 		  justify-content: center;
 		  text-align:center;
-		  word-spacing: 60px;		  
+		  word-spacing: 60px;
 		  border-bottom: 1px solid rgba(0, 0, 0, 0.7);
-		  background-color: rgba(240,248,255,1);		  
+		  background-color: rgba(240,248,255,1);
 		}
-		
+
 		.nav p.time{
 		color: rgba(0, 0, 0, 1);
 		text-shadow: none;
 		text-align: right;
 		font-weight: 500;
 		}
-		
+
 		.nav ul li {
 		display: inline;
 		letter-spacing: 2px;
 		line-height: 1.5em;
 		}
-		
+
 		#time {
 		color: rgba(0, 0, 0, 1);
 		text-shadow: none;
@@ -114,13 +114,13 @@
 		float: right;
 		padding-right: 20px;
 		}
-		
+
 		.nav a{
 		color: rgba(0, 0, 0, 1);
 		text-shadow: none;
 		font-weight: 500;
 		}
-		
+
 		.nav a:hover{
 		color: #4C4C4C;
 		}
@@ -129,7 +129,7 @@
 		RULES FOR PARALLAX
 		..................
 		*/
-		
+
 		.parallax1 {
 		background: url("images/adams1.jpg") no-repeat;
 		height: 100%;
@@ -137,11 +137,11 @@
 		background-position: center;
 		background-repeat: no-repeat;
 		-webkit-background-size: cover;
-		-moz-background-size: cover; 
-		-o-background-size: cover; 
+		-moz-background-size: cover;
+		-o-background-size: cover;
 		background-size: cover;
 		}
-		
+
 		.parallax3 {
 		background: url("images/pines3b.png") no-repeat;
 		height: 100%;
@@ -149,11 +149,11 @@
 		background-position: center;
 		background-repeat: no-repeat;
 		-webkit-background-size: cover;
-		-moz-background-size: cover; 
-		-o-background-size: cover; 
+		-moz-background-size: cover;
+		-o-background-size: cover;
 		background-size: cover;
 		}
-		
+
 		.page1 {
 		  display: flex;
 		  flex-direction: column;
@@ -161,42 +161,42 @@
 		  height: 1000px;
 		  margin: 0;
 		  padding: 0;
-		  float: left;	  
+		  float: left;
 		  align-items: center;
 		  border-bottom-style: solid;
 		  border-width: 1px;
-		  border-color: rgba(0, 0, 0, 0.5);	  
+		  border-color: rgba(0, 0, 0, 0.5);
 		  justify-content: center;
 		}
-		
+
 		.page1 h1, .page1 h2, .page1 p, .page1 li, .page1 a{
-		color: rgba(255, 255, 255, 1);	
-		text-shadow: 1px 1px #000;	
+		color: rgba(255, 255, 255, 1);
+		text-shadow: 1px 1px #000;
 		}
-		
+
 		.page1 p{
 		text-align: left;
 		}
-		
+
 		.page1 h2{
-		border-bottom: 1px solid rgba(255,255,255, 0.7);	
-		color: rgba(255, 255, 255, 1);	
+		border-bottom: 1px solid rgba(255,255,255, 0.7);
+		color: rgba(255, 255, 255, 1);
 		max-width: 70%;
 		}
-		
+
 		.page1 li {
 		  list-style-type: none;
 		}
-		
+
 		.content1{
 		justify-content: center;
-		max-width: 25%; 
+		max-width: 25%;
 		/*
 		SET HOW SMALL BLOCK ON PAGE 1 MUST BE
 		*/
 		}
-		
-		.page2, .page4 {	   
+
+		.page2, .page4 {
 		  max-width: 100%;
 		  height: auto;
 		  padding: 0;
@@ -212,34 +212,39 @@
 		  float: left; 	/*added for icons */
 		  color: rgba(0, 0, 0, 1);
 		}
-		
-		.page2, .page4 {		
-		margin: 50px;		
+
+		.page2, .page4 {
+		margin: 50px;
 		}
-		
+
 		.content2 {
 		max-width: 90%;
 		}
-		
+
 		.content2 h1, .content4 h1 {
 		  border-bottom-style: solid;
 		  border-width: 1px;
 		  border-color: rgba(0, 0, 0, 0.5);
 		  max-width: 40%;
 		}
-		
+
 		.inline {
-		display: inline;	
+		display: inline;
+		float: left;
 		}
-		
+
+		.narrow {
+		max-width: 70%;
+		}
+
 		.author-picture{
 		max-width: 200px;
-		max-height: 250px;	
+		max-height: 250px;
 		float: left;
 		padding-right: 20px;
 		display: inline;
 		}
-	
+
 		.page3 {
 		  max-width: 100%;
 		  height: 800px;
@@ -250,71 +255,71 @@
 		  text-align:left;
 		  float: left;
 		}
-		
+
 		.page4 {
-		align-items: left;	
+		align-items: left;
 		}
-		
+
 		.icons {
 		width: 100%;
 		}
 		/* KRIJG ICONEN NAAR LINKS */
-		
+
 		.icons li {
 		display: inline;
 		padding-right: 1%;
 		}
-		
+
 		.content4 a:hover{
 		color: #4C4C4C;
 		}
-		
+
 		.content4 a {
 		color:rgba(0,0,0,1);
 		text-shadow: none;
 		font-weight: 600;
 		}
-		
+
 		.unfold {
 		  max-height: 70px;
-		  
+
 		  /*position: relative;*/
-		  
-		  transition-timing-function: ease;  
+
+		  transition-timing-function: ease;
 		  -webkit-transition: max-height 1.5s;
 		  -o-transition: max-height 1.5s;
 		  -moz-transition: max-height 1.5s;
 		  transition: max-height 1.5s;
-		  
+
 		  text-align: center;
-		  overflow: hidden;	
+		  overflow: hidden;
 		}
-		
+
 		.highlight:hover {
-		color: #4C4C4C;	
+		color: #4C4C4C;
 		}
-		
+
 		.highlight:focus {
 		border-bottom-style: solid;
 		border-width: 1px;
-		border-bottom: 1px solid rgba(0, 0, 0, 0.7);	
+		border-bottom: 1px solid rgba(0, 0, 0, 0.7);
 		}
-		
+
 		.unfold:focus {
 		  max-height: 1000px;
 		}
-		
+
 		 /* Turn off parallax scrolling for tablets and phones. Increase/decrease the pixels if needed */
 		@media only screen and (max-device-width: 480px) {
 		.parallax1 {
 			background-attachment: scroll;
 			}
 		}
-		
+
 		@media only screen and (max-device-width: 480px) {
 		.parallax3 {
 			background-attachment: scroll;
 			}
 		}
-		
-} 
+
+}
